----------------------------------------------------------------------------
libgphoto2 2.1.3

   * builtin cache:
     - use all available RAM on systems without memory size detection

drivers (camlibs):

   * Canon driver:
     - added support for EOS 300D
     - fixed ProductID for PowerShot S45
     - fixed support for serial cameras
     - fixed thumbnail stuff

   * New driver for Ricoh Caplio G3.

   * Smal driver:
     - misc improvements

   * PTP2 driver:
     - added misc cameras
     - thumbnail hacks (?)

----------------------------------------------------------------------------
libgphoto2 2.1.2

   * fixed nasty stack overflow/segfault bug
   * improved/fixed support for Sun

drivers (camlibs):

   * All drivers:
     - report vendor/model in a new (formatted) fashion

   * Canon driver: 
     - added support for capturing on consumer class cameras, tested on
       Canon PowerShot S45, Canon PowerShot G2
     - G2 works again running from AC adapter
     - multiple new models added (A60, A70, ...)

   * PTP2 driver:
     - Next generation PTP driver added, using this as default now.

   * New Agfa CL20 driver from http://cl20.poeml.de/.

   * New camera library spca50x for all chips supporting the spca50x bridges
     (merging the gsmart, benq and spca504_flash driver into one).


----------------------------------------------------------------------------
libgphoto2 2.1.1

   * separated libgphoto2 sources from gphoto2 command line interface

   * gphoto2 manual moved to separate package gphoto2-manual

drivers (camlibs):

   * Ricoh

   * Canon driver: 
     - added support for Canon PowerShot A100, Canon PowerShot A200,
       Canon PowerShot S45, Canon PowerShot S230, Canon Digital IXUS v3,
       Canon PowerShot G3
     - fixed Canon EOS D60 unlocking

   * PTP driver:
     - fixed some bugs
     - added support for Nikon D100
     - added support for Canon PowerShot S45, Canon PowerShot S230, 