@@ -38,7 +38,7 @@
  * @CANON_USB_FUNCTION_GET_PIC_ABILITIES: Command to "get picture abilities", which
  *   seems to be a list of the different sizes and quality of images that are available on
  *   this camera. Not implemented (and will cause an error) on the EOS cameras
- *   or on newer PowerShot cameras such as the S45 and G3.
+ *   or on newer PowerShot cameras such as S45, G3, G5.
  * @CANON_USB_FUNCTION_GENERIC_LOCK_KEYS: Command to lock keys (and turn on "PC" indicator)
  *   on non-EOS cameras.
  * @CANON_USB_FUNCTION_EOS_LOCK_KEYS: Lock keys (EOS cameras)
