@@ -1,4 +1,12 @@
 ----------------------------------------------------------------------------
+libgphoto2 CVS HEAD
+
+drivers (camlibs):
+
+   * Canon driver:
+     - added support for G5
+
+----------------------------------------------------------------------------
 libgphoto2 2.1.3
 
    * builtin cache:
